force-app/main/default/objects/KT_Onboarding__c/KT_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Platform parent onboarding record shell required by B4 relationships. Other KT platform features extend this object with their feature-specific fields.</description>
    <label>KT Onboarding</label>
    <nameField>
        <displayFormat>ONB-{000000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Onboardings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>