force-app/main/default/objects/KT_Onboarding__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <description>Name of the candidate or employee used in generated onboarding documents.</description>
    <label>Candidate Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>