force-app/main/default/objects/KT_Onboarding__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department or business unit used in generated onboarding documents.</description>
    <label>Department</label>
    <length>120</length>
    <type>Text</type>
</CustomField>