force-app/main/default/objects/KT_Onboarding__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hiring manager responsible for the onboardee. B4 vault/request access for manager users is scoped through this lookup.</description>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Hiring Managed Onboardings</relationshipLabel>
    <relationshipName>Hiring_Managed_Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>