force-app/main/default/objects/KT_Onboarding__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Candidate role or position used during document generation.</description>
    <label>Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>