force-app/main/default/objects/KT_Onboarding__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Candidate start date used in offer letters and onboarding agreements.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>