force-app/main/default/objects/KT_Onboarding__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <description>Primary work location used in generated onboarding documents.</description>
    <label>Work Location</label>
    <length>160</length>
    <type>Text</type>
</CustomField>